crates/sieve-rules/bench-data/benign-near/extra-generic-multilingual/extra-multilingual-058.txt
pls help stuck for 3 hours

cargo clippy gives:
warning: unused import: `std::collections::HashMap`
  --> src/lib.rs:3:5
   |
 3 | use std::collections::HashMap;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

i deleted the import and now it says:
error[E0412]: cannot find type `HashMap` in this scope

??????????????????
